# text-similarity-cluster

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/src/: text2vec_cluster.py
