[tool.poetry]
name = "text-similarity-cluster"
version = "0.1.0"
description = ""
authors = ["HanabiNana7 <skyfly12401@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
sentence-transformers = "^4.1.0"
scikit-learn = "^1.6.1"
numpy = "^2.2.5"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pyupgrade = "^3.19.1"
isort = "^5.10.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
